# synapse

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  README.md  compose.yml  pyproject.toml  pytest.ini
.claude-plugin/: marketplace.json
.github/: dependabot.yml
docs/: dashboard-contract.md  example-transcript.json
dream/: __main__.py  cursor_parser.py  stage3.py
ingestion/: __main__.py  backfill.py  chunks.py  claude_ai_backfill.py  claude_ai_client.py  config.py  contamination.py  contradiction.py  cursor_sqlite_backfill.py  cursor_sqlite_client.py  db.py  dedup.py  edge_dates.py  embedding.py  extractor.py  jsonl_client.py  kg_client.py  kg_pg_read.py  kg_pg_write.py  llm_client.py  llm_schemas.py  models.py  notes.py  poller.py  preferences_gate.py  project_id.py  pydantic_ai_claude_sdk.py  research_capture.py  schema_check.py  textsafe.py  timeline_gate.py  web_artifacts.py  web_chunker.py  web_enqueue.py  web_extractors.py
init/: 01_apply_schema.sh
mcp_server/: board.py  config_sync_routes.py  dashboard_routes.py  device_routes.py  kg_pg.py  preferences_routes.py  recall.py  server.py  skill_sync_routes.py  skills_provider.py  timeline.py  timeline_routes.py  web_login_routes.py
plugin/: README.md
schema/: 001_initial.sql  002_span_id.sql  003_voyage_dims.sql  004_session_embeddings.sql  005_paradedb.sql  006_feedback_weights.sql  007_drop_summaries.sql  008_chunks.sql  009_synth_documents.sql  010_memory_proposals.sql  011_web_artifacts.sql  012_web_chunks.sql  013_web_chunk_context.sql  014_halfvec_hnsw_indexes.sql  015_extraction_priority.sql  016_extraction_claimed_at.sql  017_kg_postgres.sql  018_web_extraction.sql  019_kg_mention_count.sql  020_entity_type_taxonomy.sql  021_recall_metrics.sql  022_skill_gap_candidates.sql  023_skill_ledger_hardening.sql  024_skill_serving.sql  025_skill_sync.sql  026_skill_history.sql  027_skill_proposal_body.sql  028_kg_invalidated_by.sql  029_kg_superseded_episodes_gin.sql  030_config_lane.sql  031_config_scope.sql  032_config_scan_cursor.sql  033_timeline.sql  034_embedding_meta.sql  (+12 more)
(+165 files in other folders)
